--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "antd": "^5.26.0",
     "clsx": "^2.1.1",
