--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@ant-design/icons": "^5.6.1",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.81.2",
     "antd": "^5.26.0",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "motion": "^12.18.1",
+    "query": "^0.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2",
