--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.81.2",
+    "@uiw/react-md-editor": "^4.0.7",
     "antd": "^5.26.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
