--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.6.2",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
   },
