--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:3000/api
-VITE_BASE_URL=http://localhost:3000
+VITE_API_URL=https://api.turaevkozimxon.uz/api
+VITE_BASE_URL=https://api.turaevkozimxon.uz
